--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                 </div>
             </section>
             <section class="conteudo-search-dominio">
-                <h2>Buscar um domínio</h2>
-                <p>Veja se o domínio desejado está disponível</p>
+                <h2>Buscar um domínio!</h2>
+                <p>Veja se o domínio desejado está disponível!</p>
                 <form>
                     <input type="text" name="dominio" placeholder="Digite seu domínio desejado">
                     <input type="submit" value="Buscar Domínio">
