--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
             <nav>
                 <a href="#"><img class="logo" src="img/hdchostlogo.png" alt=""></a>
                 <ul class="items-navbar">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Planos</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="#main-banner">Home</a></li>
+                    <li><a href="#conteudo-precos">Planos</a></li>
+                    <li><a href="#contato-container">Contato</a></li>
                     <li><a href="#" class="default-btn">Login</a></li>
                 </ul>
             </nav>
         </div>
         <main>
-            <div class="main-banner">
+            <div class="main-banner" id="main-banner">
                 <h1>hDC Host</h1>
                 <p>Os melhores planos para qualquer tipo de Projeto</p>
             </div>
@@ -62,7 +62,7 @@
                     </li>
                 </ul>
             </section>
-            <section class="conteudo-precos">
+            <section class="conteudo-precos" id="conteudo-precos">
                 <h1>Planos e Preços</h1>
                 <p>Selecione o plano ideal para você!</p>
                 <div class="conteudo-planos">
@@ -124,14 +124,14 @@
                     <input type="submit" value="Buscar Domínio">
                 </form>
             </section>
-            <section class="contato-container">
+            <section class="contato-container" id="contato-container">
                 <h2>Entre em contato</h2>
                 <p>Fale com a gente para encontrar a melhor hospedagem para o seu negócio</p>
                 <form>
                     <input type="text" name="dominio" placeholder="Seu nome">
                     <input type="text" name="email" placeholder="Seu e-mail">
                     <textarea name="mensagem" placeholder="Digite sua mensagem"></textarea>
-                    <input type="subm" value="Enviar">                    
+                    <input type="submit" value="Enviar">                    
                 </form>
             </section>
         </main>
